update 26/10 - completed create bill